--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title><%= title %></title>
+    <script src="https://use.fontawesome.com/0c43b3eb42.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/vie6fzg.css">
+    <link rel="stylesheet" href="/stylesheets/falling-text.css">
+    <link rel="stylesheet" href="/stylesheets/log-in-form.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body>
