--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,12 +3,31 @@
 <section>
 	<div class="splash-light entry-block">
 		<div class="start-wrapper">
-			<p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+				<form method="post" action="/process-login">
+
+						<div class="flex-container form-wrapper">
+
+							<div class="column-this">
+								<div class="flex-container form-section-wrapper">
+										<label for="email-input"> Email </label>
+										<input id="email-input" type="email" name="myEmail" />
+								</div> <!-- flex-container form-section-wrapper -->	
+
+								<div class="flex-container form-section-wrapper">
+									<label for="password-input"> Password </label>
+									<input id="password-input" type="password" name="myPassword" />
+								</div> <!-- flex-container form-section-wrapper -->
+							</div> <!-- column-this -->
+
+							<div class="form-section-wrapper-btn">
+								<button class=" check-btn circle-btn btn"> <i class="fa fa fa-rocket" aria-hidden="true"></i> </button>
+							</div> <!-- form-section-wrapper-btn -->
+
+						</div> <!-- flex-container form-wrapper -->
+					
+				</form>
+
 		</div> <!-- start-wrapper -->
 	</div>
 </section>
@@ -21,9 +40,22 @@
 
 
 			<div class="col-big splash-content-box-bottom">
+
 				<div class="flex-container splash-o-light outline-s-o-l content-box-top-big">
-					<h4>The Life Of Pablo</h4>
-				</div> <!-- content-box-top -->
+					<div class="align-title-with-effect">
+						
+							<div class="falling-text-container">
+							  <div class="moveit">Slack Sloth</div>
+							  <div class="moveit">Slack Sloth</div>
+							  <div class="moveit">Slack Sloth</div>
+							  <div class="moveit">Slack Sloth</div>
+							  <!-- <span class="text">Scroll down</span> -->
+							</div>
+					
+
+						<h4>The Life Of Slack</h4>
+					</div> <!-- align-title-with-effect -->
+				</div> <!-- flex-container splash-o-light outline-s-o-l content-box-top-big -->
 
 				<div class="content-box-bottom">
 					<p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ut labore et!</p>
@@ -49,7 +81,13 @@
 </section>
 
 
-<div class="temp-empty-section"> <br /> </div>
+<div class="temp-empty-section"> 
+
+			<div class="real-sloth-wrapper">
+				<img src="./images/Sloth.png" />
+			</div>
+
+</div>
 
 
 <section>
@@ -63,10 +101,26 @@
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat</p>
 
+
 			</div> <!-- start-wrapper -->
 
 	</div> <!-- splash-o-light -->
 </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
