--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,14 @@
 
 
 <section>
-	<div class="splash-light entry-block">
+	<div class="entry-block bg-overlay">
+
 		<div class="start-wrapper">
 
 				<form method="post" action="/process-login">
 
 						<div class="flex-container form-wrapper">
-
+					
 							<div class="column-this">
 								<div class="flex-container form-section-wrapper">
 										<label for="email-input"> Email </label>
@@ -29,7 +30,8 @@
 				</form>
 
 		</div> <!-- start-wrapper -->
-	</div>
+		
+	</div> <!-- splash-light entry-block -->
 </section>
 
 
@@ -53,7 +55,7 @@
 							</div>
 					
 
-						<h4>The Life Of Slack</h4>
+						<h4>The Life Of Sloth</h4>
 					</div> <!-- align-title-with-effect -->
 				</div> <!-- flex-container splash-o-light outline-s-o-l content-box-top-big -->
 
