--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,17 +12,17 @@
 							<div class="column-this">
 								<div class="flex-container form-section-wrapper">
 										<label for="email-input"> Email </label>
-										<input id="email-input" type="email" name="myEmail" />
+										<input id="email-input" type="email" name="loginEmail" />
 								</div> <!-- flex-container form-section-wrapper -->	
 
 								<div class="flex-container form-section-wrapper">
 									<label for="password-input"> Password </label>
-									<input id="password-input" type="password" name="myPassword" />
+									<input id="password-input" type="password" name="loginPassword" />
 								</div> <!-- flex-container form-section-wrapper -->
 							</div> <!-- column-this -->
 
 							<div class="form-section-wrapper-btn">
-								<button class=" check-btn circle-btn btn"> <i class="fa fa fa-rocket" aria-hidden="true"></i> </button>
+								<button class=" green-btn circle-btn btn"> <i class="fa fa fa-rocket" aria-hidden="true"></i> </button>
 							</div> <!-- form-section-wrapper-btn -->
 
 						</div> <!-- flex-container form-wrapper -->
@@ -82,12 +82,13 @@
 
 </section>
 
-
+ 
 <div class="temp-empty-section"> 
-
-			<div class="real-sloth-wrapper">
-				<img src="./images/Sloth.png" />
-			</div>
+			
+				<div class="real-sloth-wrapper">
+					<img src="./images/Sloth.png" />
+				</div>
+			
 
 </div>
 
@@ -108,22 +109,4 @@
 
 	</div> <!-- splash-o-light -->
 </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
