--- a/public/stylesheets/log-in-form.css
+++ b/public/stylesheets/log-in-form.css
@@ -54,8 +54,12 @@ input {
   border-radius: .5em;
 }
 
-button .fa-rocket {
+.circle-btn .fa {
   font-size: 25px;
+}
+.sqr-btn .fa {
+  font-size: 24px;
+  padding-left: 5px;
 }
 
 .btn {
@@ -73,11 +77,12 @@ button .fa-rocket {
   box-shadow: none; 
 }
 
+
 .circle-btn {
     width: 60px;
     height: 60px;
     border-radius: 50%;
-    color:#fff;
+    color:#f5f5f5;
     text-align: center;
     display: inline-flex;
     flex-direction: column;
@@ -86,7 +91,65 @@ button .fa-rocket {
     border-bottom: none; padding: 0px;
 }
 
-.check-btn {
+.green-btn {
     background-color: #4CAF50;
 }
+
+.sqr-btn {
+    padding: 5px 8px;
+    color: #F5F5F5;
+    margin: 4px;
+    font-size: 21px;
+}
+
+.full-width-btn {
+  width: 100%;
+}
 /* ==============END=============== */
+
+
+/*==========  /Signup ======== */
+
+h2.form-title {
+    margin-bottom: 32px;
+    margin-top: 22px;
+    font-size: 28px;
+}
+
+.signup-container {
+  margin: 0 auto;
+    margin-top: 85px;
+  justify-content: center;
+  box-shadow: 0 2px 0 rgba(0,0,0,0.06);
+  padding: 30px;
+  border-radius: 4px;
+  flex-direction: column;
+  width: 30%;
+  align-items: center;
+  transition: background-color 0.3s ease;
+  background: #f9f9f9;
+}
+
+.sign-up-btn-wrap {
+    justify-content: flex-end;
+    margin-top: 28px;
+    margin-bottom: 22px;
+}
+.one-field-wrap {
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.input-style {
+  min-width: 185px;
+}
+.label-wrap {
+  min-width: 145px;
+}
+
+.empty-block {
+  padding:100px;
+}
