--- a/public/stylesheets/log-in-form.css
+++ b/public/stylesheets/log-in-form.css
@@ -1,3 +1,14 @@
+
+.error-message {
+  background: #F02B63;
+  box-sizing: border-box;
+  color: #fff;
+  margin: 20px auto;
+  padding: 20px;
+  width: 100%;
+}
+
+
 /* ===========Log In Form================== */
 
 .form-wrapper {
