--- a/views/user-views/dashboard.ejs
+++ b/views/user-views/dashboard.ejs
@@ -5,14 +5,20 @@
 	 <br />
 	 <br />
 
-	 
+
 	 <%- include('../mixins/_slackInfoForm'); %>
 
 
 	 <br />
 	 <br />
 	 <br />
+	 YOU STILL NEED TO CONNECT SLOTH MODEL 
 	 <br />
+	 
+	 <br />
+	 <br />
+	 <br />
+
 
 	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
