--- a/views/mixins/_slackInfoForm.ejs
+++ b/views/mixins/_slackInfoForm.ejs
@@ -1,4 +1,18 @@
 
 
 
-	<p>It Works!</p>
+	<form method="post" action="/process-slackInfoForm">
+	  <label for="url-input"> Slack Team URL </label>
+    <input  id="url-input" type="text" placeholder="wynwood-tech" name="slackTeamURL"/>.Slack.com
+
+    <br />
+
+		<label for="email-input"> Email </label>
+		<input id="email-input" type="email" name="slackTeamEmail">
+
+		<label for="password-input"> Password </label>
+		<input id="password-input" type="password" name="slackTeamPassword">
+
+		<button>Save</button>
+
+	</form>
