db users are not being saved after being registered

--- a/views/user-views/dashboard.ejs
+++ b/views/user-views/dashboard.ejs
@@ -8,7 +8,9 @@
 
 	 <%- include('../mixins/_slackInfoForm'); %>
 
-
+<%= currentUser.email %>
+<%= currentUser.slackTeamURL %>
+<%= currentUser.slackTeamEmail %>
 	 <br />
 	 <br />
 	 <br />
