--- a/views/mixins/_slackInfoForm.ejs
+++ b/views/mixins/_slackInfoForm.ejs
@@ -14,6 +14,6 @@
 		<label for="password-input"> Password </label>
 		<input id="password-input" type="password" name="slackTeamPassword">
 
-		<button>Save</button>
+		<button>Save Slack Entry</button>
 
 	</form>
