added heroku setup

--- a/views/mixins/_slackEntryList.ejs
+++ b/views/mixins/_slackEntryList.ejs
@@ -6,7 +6,7 @@
   <% slackEntry.forEach((oneEntry) => { %>
     <li>
       <h3> <%= oneEntry.slackTeamURL %> </h3>
-      <p> $<%= oneEntry.slackTeamEmail %> </p>
+      <p> <%= oneEntry.slackTeamEmail %> </p>
       
       <ul>
 
