got delete button working

--- a/views/mixins/_slackEntryList.ejs
+++ b/views/mixins/_slackEntryList.ejs
@@ -11,13 +11,13 @@
       <ul>
 
         <li>
-          <a href="/Entrys/<%= oneEntry._id %>/edit">
+          <a href="/entrys/<%= oneEntry._id %>/edit">
             Edit
           </a>
         </li>
 
         <li>
-          <a href="/Entrys/<%= oneEntry._id %>/delete">
+          <a href="/entrys/<%= oneEntry._id %>/delete">
             Delete (GET)
           </a>
         </li>
