fixed image name since it had capital letter in url by mistake

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -86,7 +86,7 @@
 <div class="temp-empty-section"> 
 			
 				<div class="real-sloth-wrapper">
-					<img src="../images/Sloth.png" />
+					<img src="/images/sloth.png" />
 				</div>
 			
 
