--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/vie6fzg.css">
     <link rel="stylesheet" href="/stylesheets/falling-text.css">
     <link rel="stylesheet" href="/stylesheets/log-in-form.css">
+    <link rel="stylesheet" href="/stylesheets/slack-info-form.css">
     <link rel="stylesheet" href="/stylesheets/dashboard.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
