--- a/views/mixins/_slackInfoForm.ejs
+++ b/views/mixins/_slackInfoForm.ejs
@@ -7,7 +7,7 @@
 
 
 			<div class="flex-container info-form-top">	
-			  <label for="url-input"> Slack Team URL </label>
+			  <label for="url-input"> Team URL </label>
 		    <input  id="url-input" type="text" placeholder="wynwood-tech" name="slackTeamURL"/>
 		    	<div class="slackDotCom">.Slack.com</div>
 		  </div> <!-- info-form-top -->
@@ -37,7 +37,7 @@
 		</div> <!-- info-top-and-bottom-wrap -->
 
 		<div class="flex-container slack-save-btn-wrap">
-			<button>Save Slack Entry</button>
+			<button class=" green-btn circle-btn btn"> <i class="fa fa-plus-circle" aria-hidden="true"></i> </button>
 	</div>
 
 
