--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title><%= title %></title>
-    <script src="https://use.fontawesome.com/0c43b3eb42.js"></script>
+   <script src="https://use.fontawesome.com/41e358a6bc.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/vie6fzg.css">
     <link rel="stylesheet" href="/stylesheets/falling-text.css">
     <link rel="stylesheet" href="/stylesheets/log-in-form.css">
     <link rel="stylesheet" href="/stylesheets/slack-info-form.css">
     <link rel="stylesheet" href="/stylesheets/dashboard.css">
+    <link rel="stylesheet" href="/stylesheets/buttons.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body>
