style: SlackEntryList ejs and css

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/stylesheets/falling-text.css">
     <link rel="stylesheet" href="/stylesheets/log-in-form.css">
     <link rel="stylesheet" href="/stylesheets/slack-info-form.css">
+    <link rel="stylesheet" href="/stylesheets/slack-entry-list.css">
     <link rel="stylesheet" href="/stylesheets/dashboard.css">
     <link rel="stylesheet" href="/stylesheets/buttons.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
