--- a/public/stylesheets/buttons.css
+++ b/public/stylesheets/buttons.css
@@ -70,10 +70,34 @@
     background-color: #4CAF50;
 }
 
+.a-trans-btn {
+    background-color: transparent;
+    color: #0096d6;
+}
+.a-bad-hov:hover {
+  color: #d0021b; /* Error color red */
+}
+.a-green-hov:hover {
+  color: #4CAF50; 
+}
 
 
-
-
+/* ==========
+==== a link style 
+ ========= */
+.a-btn {
+    display: inline-block;
+    -webkit-transition: box-shadow 0.2s ease;-moz-transition: box-shadow 0.05s ease;
+    transition: all 0.2s ease;
+    font-size: 18px;
+}
+.a-btn:hover {
+    opacity: 0.7;
+    text-decoration: underline;
+}
+/*.a-btn:active {
+  box-shadow: none; 
+}*/
 
 
 
