--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -1,9 +1,12 @@
+
 .contain-page {
 	width: 90%;
 	margin: 0 auto;
 	font-size: 18px;
 }
 
-.big-space-for-now {
-	padding: 200px;
+
+/*.big-space-for-now {
+	padding: 100px;
 }
+*/
