--- a/views/mixins/_slackEntryList.ejs
+++ b/views/mixins/_slackEntryList.ejs
@@ -9,21 +9,33 @@
          
           <span class="card-label"> Team URL </span>
           <div class="card-line-thick"></div>
-          <h3> 
-            <%= oneEntry.slackTeamURL %> <span class="card-label">.Slack.com </span>
-          </h3>
+          
+
+          <div class="card-labels-url-wrap">
+            
+
+            <span class="card-label-url"><%= oneEntry.slackTeamURL %></span>
+            <span class="card-label-dot-slack">.Slack.com </span>
+
+         </div> <!-- card-labels-url-wrap -->
 
          
-          
+        <div class="card-labels-email-wrap">
           <span class="card-label"> Email </span>
           <div class="card-line"></div>
 
           <p>  <%= oneEntry.slackTeamEmail %> </p>
+        </div> <!-- card-labels-email-wrap -->
           
 
+
+        <div class="card-labels-pass-wrap">
           <span class="card-label"> Password </span>
           <div class="card-line"></div>
           <p> <%= oneEntry.encryptedPassword %> </p>
+        </div> <!-- card-labels-pass-wrap -->
+
+        
 
           <div class="flex-container entry-card-btn-container ">
             <a class="sqr-btn a-btn a-trans-btn a-green-hov " href="/entrys/<%= oneEntry._id %>/edit">Edit</a>
