--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/stylesheets/slack-entry-list.css">
     <link rel="stylesheet" href="/stylesheets/dashboard.css">
     <link rel="stylesheet" href="/stylesheets/buttons.css">
+    <link rel="stylesheet" href="/stylesheets/clipboard.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body>
@@ -49,6 +50,16 @@
 	  	Made With Sloth 💩 
 	    </footer>
 
+
+
+
+
+
+
+
+<!-- My Scripts -->
+	<script src="/scripts/revealhide.js"></script>
+	<script src="/scripts/clipboard.js"></script>
 
   </body>
 </html>
