--- a/views/mixins/_slackEntryList.ejs
+++ b/views/mixins/_slackEntryList.ejs
@@ -37,7 +37,9 @@
             <span class="card-label"> Email </span>
             <div class="card-line"></div>
 
-            <p>  <%= oneEntry.slackTeamEmail %> </p>
+            <p class="slack-team-email-card-txt">  
+              <%= oneEntry.slackTeamEmail %> 
+            </p>
           </div> <!-- card-labels-email-wrap -->
             
 
