--- a/views/user-views/entry-edit-page.ejs
+++ b/views/user-views/entry-edit-page.ejs
@@ -1,5 +1,8 @@
 <h3> ENTRY EDIT FORM </h3>
 
 
+<div class="contain-page">
 
-<%- include('../mixins/_slackEditEntryForm'); %>
+	<%- include('../mixins/_slackEditEntryForm'); %>
+
+</div> <!-- contain-page -->
