--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -58,7 +58,7 @@
 
 
 <!-- My Scripts -->
-	<script src="/scripts/revealhide.js"></script>
+	<script src="/scripts/scripts.js"></script>
 	<script src="/scripts/clipboard.js"></script>
 
   </body>
